<resources>
    <string name="app_name">Github Users</string>
    <string name="error_result">Network error, showing offline data</string>
    <string name="show_offline">Showing offline data</string>
    <string name="save_note_button_label">Save Note</string>
    <string name="notes_label">Notes:</string>
    <string name="followers_label">Followers:</string>
    <string name="following_label">Following:</string>
    <string name="name_label">Name:</string>
    <string name="company_label">Company:</string>
    <string name="blog_label">Blog:</string>
    <string name="no_results">No results</string>
    <string name="api_limit_reached">Api limit reached</string>
    <string name="button_enable_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="note_saved">Note saved</string>
</resources>