<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/avatar_details_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/buttonSave"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_note_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNote"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/note_height"
        android:ems="10"
        android:padding="@dimen/note_padding"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNotesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:text="@string/notes_label"
        app:layout_constraintBottom_toTopOf="@+id/editTextNote"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFollowersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/followers_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

    <TextView
        android:id="@+id/textViewFollowersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@+id/textViewFollowersLabel"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

    <TextView
        android:id="@+id/textViewFollowingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/following_label"
        app:layout_constraintStart_toEndOf="@+id/textViewFollowersCount"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

    <TextView
        android:id="@+id/textViewFollowingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@+id/textViewFollowingLabel"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

    <TextView
        android:id="@+id/textViewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine1" />

    <TextView
        android:id="@+id/textViewCompanyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/company_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameLabel" />

    <TextView
        android:id="@+id/textViewBlogLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/blog_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCompanyLabel" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNameLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewNameLabel" />

    <TextView
        android:id="@+id/textViewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCompanyLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewCompanyLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewCompanyLabel" />

    <TextView
        android:id="@+id/textViewBlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewBlogLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewBlogLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewBlogLabel" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFollowersLabel" />

    <View
        android:id="@+id/viewLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBlogLabel" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>